# benchmarking_taskiq_celery

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
localstack/cloud-formation/: localstack-cf.yml
localstack/scripts/: 0001_initial.sh
src/: benchmark.py  settings.py  tasks_common.py
src/celery_app/: app.py  tasks.py
src/taskiq_app/: app.py  tasks.py
src/taskiq_app/brokers/: sqs.py
