[project]
name = "benchmarking-taskiq-celery"
version = "0.1.0"
description = "Benchmark comparing Celery and TaskIQ performance, parallelism, and latency"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiobotocore>=3.4.0",
    "asgiref>=3.11.1",
    "celery[redis,sqs]>=5.6.3",
    "environs>=15.0.1",
    "psutil>=7.2.2",
    "pydantic>=2.13.2",
    "sqlalchemy>=2.0.49",
    "tabulate>=0.10.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.1.2",
]

[project.scripts]
benchmark = "src.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
